CTM loader now supports custom geometry